--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,10 +33,12 @@ importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_boxplot)
 importFrom(ggplot2,geom_jitter)
 importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_ribbon)
 importFrom(ggplot2,geom_violin)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_colour_manual)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,xlim)
