--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,9 @@ export(ClusteringFeatureCells)
 export(TockyKmeansRF)
 export(TockyRFClusterOptimization)
 export(partitionTockyPrepData)
+export(plotClusterMFI)
 export(plotImportanceScores)
 export(plotTockyKmeansRF)
-export(violinClusterMFIPlot)
 export(violinPlotFeatureCells)
 importClassesFrom(TockyPrep,TockyPrepData)
 importFrom(ROCR,performance)
